CHANGELOG
================================================================================

	0.4.0.3

	* core/intervals.py: Fixed bug in invert.
	* core/intervals.py: Added new functions `is_consonant`, 
	`is_perfect_consonant`, `is_imperfect_consonant`, `is_dissonant` and
	documentation + unit tests. (closes issue #33).


================================================================================

	0.4.0.2 
	Jun 5, 2009

	* core/chords.py: Faster and short pattern matching functions in 
	determine_triad. The rest should follow.
        * core/value.py: Changed instances of eight to eighth (closes #39)
	* core/diatonic.py: Fixed bug in diatonic.int_to_note (closes #40)

================================================================================

	0.4.0.1
	Mar 2, 2009

	* extra/LilyPond.py: Fixed bug in converting the duration to a valid 
	LilyPond string in from_NoteContainer. Also added support for longa 
	and breve along the way. Closed #37.
	* midi/pyFluidSynth.py: merged in pyFluidSynth 1.2.4 (closed #38)
	* midi/fluidsynth.py: Added destructor to MidiSequencer object to
	prevent errors when exiting.

================================================================================

	0.4
	Mar 1, 2009

	* Gone through and updated all the documentation and added tutorials
        for every finished module. Closed issue #22.

================================================================================

	0.3.9.2
	Mar 1, 2009

	* core/progressions.py: Factored out and added fixes for substitutions.
	Closed #21.
	* extra/LilyPond.py: Closed #34 and #35. Added fix for saving filenames
	with spaces in them, and converting octaves. 
	Thanks to Stefan Huchler for reporting these.


================================================================================

	0.3.9.1
	Feb 16, 2009

	* MANIFEST.in: Now includes the CHANGELOG in the source distribution as 
	suggested by Stefan Huchler.
